# mate-themes-extras

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.in
desktop-themes/: Makefile.am  diff-cupertine.patch
desktop-themes/ANewStartBlood/: Makefile.am  index.theme.in
desktop-themes/ANewStartBlood/gtk-2.0/: Makefile.am
desktop-themes/ANewStartBlood/gtk-3.0/: Makefile.am
desktop-themes/ANewStartBlood/metacity-1/: Makefile.am
desktop-themes/Adwaita-Cupertino-SL/: Makefile.am  index.theme.in  leeme.txt  readme.txt
desktop-themes/Adwaita-Cupertino-SL/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Adwaita-Cupertino-SL/gtk-3.0/: Makefile.am  cluebar.css  gnome-applications-gray-light.css  gnome-applications-gray.css  gnome-applications-light.css  gnome-mdi-2.css  gnome-mdi.css  gnome-panel.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css  nemo.css  scrollbar.css  settings.ini  sidebar.css  tabs-classic.css  tabs.css  unity-transparent.css  unity-white.css  unity.css
desktop-themes/Adwaita-Cupertino-SL/metacity-1/: Makefile.am  metacity-theme-1.xml  metacity-theme-3.xml
desktop-themes/Adwaita-Cupertino-SL/unity/: Makefile.am
desktop-themes/Ambiance-Xfce-LXDE-MATE/: Makefile.am  index.theme.in
desktop-themes/Ambiance-Xfce-LXDE-MATE/Docs/: Makefile.am
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Ambiance-Xfce-LXDE-MATE/gtk-3.0/: Makefile.am  gtk.css
desktop-themes/Ambiance-Xfce-LXDE-MATE/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/Ambiance-Xfce-LXDE-MATE/openbox-3/: Makefile.am  themerc
desktop-themes/Ambiance-Xfce-LXDE-MATE/unity/: Makefile.am
desktop-themes/Ambiance-Xfce-LXDE-MATE/xfwm4/: Makefile.am  left-active.xpm  left-inactive.xpm  right-active.xpm  right-inactive.xpm  themerc  top-right-active.xpm  top-right-inactive.xpm
desktop-themes/Ambiance-blue/: Makefile.am  index.theme
desktop-themes/Ambiance-blue/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Ambiance-blue/gtk-3.0/: Makefile.am  gtk-main.css  settings.ini
desktop-themes/Ambiance-blue/metacity-1/: Makefile.am
desktop-themes/Ambiance-blue/unity/: Makefile.am
desktop-themes/Ambiance-lime/: Makefile.am  index.theme
desktop-themes/Ambiance-lime/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Ambiance-lime/gtk-3.0/: Makefile.am  gtk-main.css  gtk-widgets-assets.css  gtk-widgets.css  settings.ini
desktop-themes/Ambiance-lime/metacity-1/: Makefile.am
desktop-themes/Ambiance-lime/unity/: Makefile.am
desktop-themes/AmbianceBlue/: Makefile.am  index.theme.in
desktop-themes/AmbianceBlue/gnome-shell/: Makefile.am  gnome-shell.css  theme.json
desktop-themes/AmbianceBlue/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/AmbianceBlue/gtk-3.0/: Makefile.am  gtk-widgets.css  gtk.css  settings.ini
desktop-themes/AmbianceBlue/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/AmbianceBlue/unity/: Makefile.am
desktop-themes/Blue-Submarine/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Blue-Submarine/gtk-3.0/: Makefile.am  gnome-mdi.css  gtk-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css  mate-applications.css  menu.css  scrollbar.css
desktop-themes/Cologne/: Makefile.am  index.theme  index.theme.in
desktop-themes/Cologne/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Cologne/gtk-3.0/: Makefile.am  gtk.css
desktop-themes/Cologne/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/DeLorean/: Makefile.am  index.theme
desktop-themes/DeLorean-Dark/: Makefile.am  index.theme
desktop-themes/DeLorean-Dark/Firefox/: Makefile.am
desktop-themes/DeLorean-Dark/Software-Center/: Makefile.am
desktop-themes/DeLorean-Dark/Thunderbird/: Makefile.am
desktop-themes/DeLorean-Dark/chrome/: Makefile.am  userContent.css
desktop-themes/DeLorean-Dark/cinnamon/: Makefile.am
desktop-themes/DeLorean-Dark/firefox/: Makefile.am
desktop-themes/DeLorean-Dark/gtk-2.0/: Makefile.am  (+4 more)
desktop-themes/Faience/: Makefile.am  index.theme
desktop-themes/Faience-Ocre/: Makefile.am  index.theme
desktop-themes/Gnome-Cupertino/: Makefile.am  index.theme
desktop-themes/Gnome-Cupertino-Mint/: Makefile.am  index.theme
desktop-themes/GnomishBeige/: Makefile.am  index.theme
desktop-themes/GnomishDark/: Makefile.am  index.theme.in
desktop-themes/Green-Submarine/: index.theme
desktop-themes/Radiance-Xfce-LXDE-MATE/: Makefile.am  index.theme  index.theme.in
desktop-themes/RadianceBlue/: Makefile.am  index.theme  index.theme.in
desktop-themes/Smoothly/: Makefile.am  index.theme  index.theme.in
desktop-themes/Smoothly-Black/: Makefile.am  index.theme  index.theme.in
desktop-themes/Sonar/: Makefile.am  index.theme.in
desktop-themes/SonarBlue/: AUTHORS  Makefile.am  index.theme.in
desktop-themes/Zukitwo/: Makefile.am  index.theme  index.theme.in
desktop-themes/Zukitwo-Brave/: Makefile.am  index.theme  index.theme.in
desktop-themes/Zukitwo-Colors/: Makefile.am
desktop-themes/Zukitwo-Dark/: Makefile.am  index.theme.in
desktop-themes/Zukitwo-Dust/: Makefile.am  index.theme  index.theme.in
desktop-themes/Zukitwo-Human/: Makefile.am  index.theme  index.theme.in
desktop-themes/Zukitwo-Illustrious/: Makefile.am  index.theme  index.theme.in
desktop-themes/Zukitwo-Noble/: Makefile.am  index.theme  index.theme.in
desktop-themes/Zukitwo-Wine/: Makefile.am  index.theme
desktop-themes/Zukitwo-Wise/: Makefile.am  index.theme  index.theme.in
desktop-themes/clearlooks-phenix/: Makefile.am  index.theme
desktop-themes/drakfire-dream-black/: Makefile.am  index.theme.in
gtk-themes/: Makefile.am
gtk-themes/Zukitwo-Brave/: Makefile.am  index.theme.in
gtk-themes/Zukitwo-Human/: Makefile.am  index.theme.in
gtk-themes/Zukitwo-Illustrious/: Makefile.am  index.theme.in
gtk-themes/Zukitwo-Noble/: Makefile.am  index.theme.in
gtk-themes/Zukitwo-Resonance/: Makefile.am  index.theme.in
gtk-themes/Zukitwo-Wine/: Makefile.am  index.theme.in
gtk-themes/Zukitwo-Wise/: Makefile.am  index.theme.in
icon-themes/Sonar/: Makefile.am  index.theme  index.theme.in
(+900 files in other folders)
